--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -16,6 +16,8 @@
         <input type="email" name="email" placeholder="Enter email" required autofocus>
 
         <input type="password" name="password" placeholder="Enter password" required>
+
+        <button type="submit">Log in</button>
     </form>
 
     <a th:href="@{/singup}">Sing Up</a>
