--- a/src/main/resources/templates/singup.html
+++ b/src/main/resources/templates/singup.html
@@ -8,9 +8,9 @@
 <body>
 <div>
     <form th:action="@{/singup}" th:object="${user}" method="post">
-        <input type="text" name="name" maxlength="50" th:field="*{name}" required autofocus>
-        <input type="email" name="email" th:field="*{email}" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" required>
-        <input type="password" name="password" th:field="*{password}" minlength="6" required>
+        <input type="text" name="name" maxlength="50" th:field="*{name}" placeholder="Enter name" required autofocus>
+        <input type="email" name="email" th:field="*{email}" placeholder="Enter email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" required>
+        <input type="password" name="password" placeholder="Enter password" th:field="*{password}" minlength="6" required>
         <button type="submit">ADD USER</button>
     </form>
 </div>
