--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -20,7 +20,8 @@
         <button type="submit">Log in</button>
     </form>
 
-    <a th:href="@{/singup}">Sing Up</a>
+    <a th:href="@{/singup}">Sing Up</a><br>
+    <a th:href="@{/forgot}">Forgot password?</a>
 </div>
 
 </body>
