--- a/src/main/resources/templates/main/homePage.html
+++ b/src/main/resources/templates/main/homePage.html
@@ -17,14 +17,15 @@
         <a th:href="@{admin/addSubject}">Add subject</a>
         <a th:href="@{admin/addThemeSubject}">Add theme subject</a>
         <a th:href="@{admin/answers}">Menu choose add question</a>
+        <a th:href="@{/logout}">Log out</a>
     </div>
 
     <div sec:authorize="hasAuthority('USER')">
         <p>USER</p>
         <p>Hello <span th:text="${userName}"></span></p>
-
+        <a th:href="@{/logout}">Log out</a>
         <div th:each="subject : ${subjects}">
-            <a th:text="${subject.getNameSubject()}" th:href="@{quiz/{nameSubject} (nameSubject = ${subject.nameSubject})}"></a>
+            <a th:text="${subject.nameSubject}" th:href="@{/{nameSubject} (nameSubject = ${subject.nameSubject})}"></a>
         </div>
     </div>
 </div>
