--- a/src/main/resources/templates/emailCheckForm.html
+++ b/src/main/resources/templates/emailCheckForm.html
@@ -1,18 +1,28 @@
+<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
 <!DOCTYPE html>
 <html lang="en"
       xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+    <link type="text/css" rel="stylesheet" href="../static/css/emailCheck.css" th:href="@{/css/emailCheck.css}">
 </head>
 <body>
 
-<div>
-    <span class="text-danger align-middle" th:if="${messageError}" th:text="${messageError}"></span><br>
-    <span class="text-danger align-middle" th:if="${successMessage}" th:text="${successMessage}"></span><br>
+<div class="container">
+    <div class="alert">
+        <span class="error" th:if="${messageError}" th:text="${messageError}"></span><br>
+        <span class="success" th:if="${successMessage}" th:text="${successMessage}"></span><br>
+    </div>
     <form th:action="@{/forgot}" method="post">
-        <input type="email" name="userEmail" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" placeholder="Podaj email" required autofocus><br>
-        <button class="check" type="submit" value="Check">Check</button><br>
+        <input type="email" class="check" name="userEmail" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" placeholder="Enter email" required autofocus><br>
+        <button class="button-submit" type="submit" value="Check">Check</button><br>
     </form>
 </div>
 
