--- a/src/main/resources/templates/success.html
+++ b/src/main/resources/templates/success.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div th:text="${messageAccess}"></div>
-<div th:text="${mess}"></div>
+<div th:text="${messageError}"></div>
 <button th:href="@{/login}" >Go to login page</button>
 </body>
 </html>
