--- a/src/main/resources/templates/admin/formAddSubject.html
+++ b/src/main/resources/templates/admin/formAddSubject.html
@@ -4,11 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" type="text/css" href="/static/css/addSubjectStyle.css" th:href="@{/css/addSubjectStyle.css}">
 </head>
 <body>
 
 <div>
-    <form th:action="@{/addSubject}" th:object="${subject}" method="post">
+    <form th:action="@{addSubject}" th:object="${subject}" method="post">
         <input type="text" name="nameSubject" maxlength="90" th:field="*{nameSubject}" placeholder="Enter name subject" required autofocus>
         <button type="submit">Add subject</button>
     </form>
