--- a/src/main/resources/templates/admin/menuAnswers.html
+++ b/src/main/resources/templates/admin/menuAnswers.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" type="text/css" href="/static/css/menuAnswersStyle.css" th:href="@{/css/menuAnswersStyle.css}">
 </head>
 <body>
 
