--- a/src/main/resources/templates/changePasswordForm.html
+++ b/src/main/resources/templates/changePasswordForm.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" type="text/css" href="/static/css/changePasswordStyle.css" th:href="@{/css/changePasswordStyle.css}">
 </head>
 <body>
 <form th:action="@{reset}" method="post">
