--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,9 +1,18 @@
+<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
 <!DOCTYPE html>
 <html lang="en"
       xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+
+    <link type="text/css" rel="stylesheet" href="../static/css/login.css" th:href="@{/css/login.css}">
 </head>
 <body>
 <div th:if="${message}" th:text="${message}"></div>
@@ -11,18 +20,17 @@
 <div th:if="${messagelogout}" th:text="${messagelogout}"></div>
 
 <div>
-    <form th:action="@{/login}" method="post">
-
-        <input type="email" name="email" placeholder="Enter email" required autofocus>
-
-        <input type="password" name="password" placeholder="Enter password" required>
-
-        <button type="submit">Log in</button>
-    </form>
-
-    <a th:href="@{/singup}">Sing Up</a><br>
-    <a th:href="@{/forgot}">Forgot password?</a>
+    <div class="container">
+        <h2>Sign In Now</h2>
+        <form method="post">
+            <input type="email" class="ggg" name="email" placeholder="E-MAIL" required autofocus>
+            <input type="password" class="ggg" name="password" placeholder="PASSWORD" required>
+            <div class="clearfix"></div>
+            <input type="submit" value="Sign In" name="login">
+        </form>
+        <p>Don't Have an Account ?<a th:href="@{/singup}">Create an account</a></p>
+        <p>Forgot password ?<a th:href="@{/forgot}">Reset password</a></p>
+    </div>
 </div>
-
 </body>
 </html>
