--- a/src/main/resources/templates/main/homePage.html
+++ b/src/main/resources/templates/main/homePage.html
@@ -5,6 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" type="text/css" href="/static/css/home.css" th:href="@{/css/home.css}">
 </head>
 <body>
 
