--- a/src/main/resources/templates/singup.html
+++ b/src/main/resources/templates/singup.html
@@ -4,16 +4,23 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link type="text/css" rel="stylesheet" href="/static/css/login.css" th:href="@{/css/login.css}">
 </head>
 <body>
-<div>
-    <form th:action="@{/singup}" th:object="${user}" method="post">
-        <input type="text" name="name" maxlength="50" th:field="*{name}" placeholder="Enter name" required autofocus>
-        <input type="email" name="email" th:field="*{email}" placeholder="Enter email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" required>
-        <input type="password" name="password" placeholder="Enter password" th:field="*{password}" minlength="6" required>
-        <button type="submit">ADD USER</button>
-    </form>
-</div>
 
+<div class="">
+    <div class="container">
+        <h2>Register Now</h2>
+        <form th:action="@{/singup}" th:object="${user}" method="post">
+            <input type="text" class="ggg" th:field="*{name}" name="name" placeholder="NAME" required="">
+            <input type="email" class="ggg" th:field="*{email}" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" name="email" placeholder="E-MAIL" required="">
+            <input type="password" class="ggg" th:field="*{password}" name="password" placeholder="PASSWORD" required="">
+
+            <div class="clearfix"></div>
+            <input type="submit" value="submit" name="register">
+        </form>
+        <p>Already Registered. <a th:href="@{/}">Login</a></p>
+    </div>
+</div>
 </body>
 </html>
