--- a/src/main/resources/templates/showThemeSubject.html
+++ b/src/main/resources/templates/showThemeSubject.html
@@ -7,9 +7,10 @@
     <link rel="stylesheet" type="text/css" href="/static/css/showThemeSubjectStyle.css" th:href="@{/css/showThemeSubjectStyle.css}">
 </head>
 <body>
-
-<div th:each="theme : ${themeSubjects}">
-    <a th:text="${theme.name}" th:href="@{testing/{theme} (theme = ${theme.name})}"></a>
+<div class="container">
+    <div id="theme" th:each="theme : ${themeSubjects}">
+        <a th:text="${theme.name}" th:href="@{test/{theme} (theme = ${theme.name})}"></a>
+    </div>
 </div>
 </body>
 </html>
