--- a/src/main/resources/static/css/changePasswordStyle.css
+++ b/src/main/resources/static/css/changePasswordStyle.css
@@ -1,7 +1,91 @@
+@import url('https://fonts.googleapis.com/css?family=Lato:100&display=swap');
+
 html, body{
     font-family: 'Roboto', sans-serif;
     font-size: 100%;
+    height: 100%;
     overflow-x: hidden;
     background: url(../img/bg.jpg) no-repeat 0px 0px;
     background-size:cover;
+}
+.container {
+    width: 30%;
+    margin:5em auto;
+    text-align: center;
+    background:rgba(171, 119, 157, 0.27);
+    padding: 42px 35px;
+}
+
+.container .alert{
+    text-align: center;
+}
+
+#errorLink{
+    color: red;
+    font-weight: bold;
+}
+
+.success{
+    color: green;
+    font-weight: bold;
+}
+
+input.ss{
+    width: 100%;
+    padding: 15px 0px 15px 15px;
+    border: 2px solid #fff;
+    border-radius: 20px;
+    outline: none;
+    font-size: 14px;
+    color: #fff;
+    margin: 14px 0px;
+    background: none;
+}
+
+.reset {
+    background: none;
+    border: 2px solid;
+    font: inherit;
+    line-height: 1;
+    margin: 0.5em;
+    padding: 1em 2em;
+}
+
+.reset:hover, .reset:focus{
+    -webkit-animation: pulse 1s;
+    -o-animation: pulse 1s;
+    animation: pulse 1s;
+
+    box-shadow: 0 0 0 2em
+rgba(255, 255, 255, 0);
+}
+
+button {
+    color: black;
+    -webkit-transition: 0.25s;
+    transition: 0.25s;
+}
+button:hover, button:focus {
+    background: green;
+    border-color: green;
+    color: #fff;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+@keyframes pulse{
+    0% {
+        box-shadow: 0 0 0 0 green;
+    }
+}
+
+@media(max-width:940px)
+{
+    .container {width: 50%;}
+}
+
+@media(max-width:550px)
+{
+    .container {width: 90%; padding: 5%;}
+    input.check {width: 90%; padding: 15px 4%;}
 }
