--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -1,7 +1,113 @@
+@import url(https://fonts.googleapis.com/css?family=Righteous);
+
+
 html, body{
     font-family: 'Roboto', sans-serif;
     font-size: 100%;
+    height: 100%;
+    width: 100%;
     overflow-x: hidden;
     background: url(../img/bg.jpg) no-repeat 0px 0px;
     background-size:cover;
+}
+
+.container .user #board{
+    margin: 20px auto;
+    box-sizing: border-box;
+    width:400px;
+    height:400px;
+    display:grid;
+    grid-template-columns: 200px 200px 200px;
+    grid-column-gap: 20px;
+    grid-row-gap: 20px;
+}
+
+.container .user #board #subjects{
+    padding:20px;
+    border-radius:10px;
+    border: 2px solid red;
+    color:#fff;
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    font-size:30px;
+    font-family:sans-serif;
+}
+
+.container .user #subject{
+    color: white;
+    cursor: pointer;
+    text-decoration: none;
+    text-transform: uppercase;
+}
+
+.container .user #subject:hover{
+    font-size: 150%;
+    color: green;
+}
+
+.info{
+    margin-top: 15px;
+    width: 100%;
+    height: auto;
+}
+
+
+*,*:before,*:after {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    position: relative;
+}
+
+ .info h1{
+     margin-top: 10px;
+     display: inline-block;
+     color: white;
+     font-family: 'Righteous', serif;
+     font-size: 5em;
+     text-shadow: .03em .03em 0 hsla(230,40%,50%,1);
+}
+
+ .admin-name{
+     text-align: right;
+     margin-right: 15px;
+     margin-top: 30px;
+ }
+
+.admin-name h1{
+    margin-top: 10px;
+    display: inline-block;
+    color: white;
+    font-family: 'Righteous', serif;
+    font-size: 5em;
+    text-shadow: .03em .03em 0 hsla(230,40%,50%,1);
+}
+
+.info a {
+    padding-right: 10px;
+    font-size: 20px;
+    float: right;
+    cursor: pointer;
+    text-decoration: none;
+    color: white;
+}
+
+.info a:hover {
+   font-size: 160%;
+
+}
+
+
+@media(max-width:940px)
+{
+    .container {width: 50%;}
+    .info a{float: right;}
+}
+
+@media(max-width:550px)
+{
+    .container {width: 90%; padding: 5%;}
+    input.ggg {width: 90%; padding: 15px 4%;}
+    .info a{float: right;}
 }
