--- a/src/main/resources/static/css/menuAnswersStyle.css
+++ b/src/main/resources/static/css/menuAnswersStyle.css
@@ -5,3 +5,23 @@ html, body{
     background: url(../img/bg.jpg) no-repeat 0px 0px;
     background-size:cover;
 }
+
+.container{
+    width: 30%;
+    height: auto;
+    margin:5em auto;
+    text-align: center;
+    background:rgba(171, 119, 157, 0.27);
+    padding: 42px 35px;
+}
+
+.container a{
+    text-decoration: none;
+    color: white;
+}
+.container .info{
+    margin-bottom: 5px;
+}
+.container form{
+    margin-top: 10px;
+}
