--- a/src/main/resources/static/css/showThemeSubjectStyle.css
+++ b/src/main/resources/static/css/showThemeSubjectStyle.css
@@ -1,7 +1,53 @@
 html, body{
     font-family: 'Roboto', sans-serif;
     font-size: 100%;
+    width: 100%;
+    height: 100%;
     overflow-x: hidden;
     background: url(../img/bg.jpg) no-repeat 0px 0px;
     background-size:cover;
+}
+
+
+.container{
+    margin: 20px auto;
+    box-sizing: border-box;
+    width:auto;
+    height:300px;
+    display:grid;
+    grid-template-columns: 200px 200px 200px;
+    grid-column-gap: 20px;
+    grid-row-gap: 20px;
+}
+
+.container #theme{
+    padding:20px;
+    border-radius:10px;
+    border: 2px solid red;
+    color:#fff;
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    font-size:30px;
+    font-family:sans-serif;
+}
+
+.container a{
+    color: white;
+    cursor: pointer;
+}
+
+.container a:hover{
+    font-size: 150%;
+}
+
+
+@media(max-width:940px)
+{
+    .container {width: 50%;}
+}
+
+@media(max-width:550px)
+{
+    .container {width: 90%; padding: 5%;}
 }
