--- a/src/main/resources/templates/admin/formAddSubject.html
+++ b/src/main/resources/templates/admin/formAddSubject.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<div>
+<div class="container">
     <form th:action="@{addSubject}" th:object="${subject}" method="post">
         <input type="text" name="nameSubject" maxlength="90" th:field="*{nameSubject}" placeholder="Enter name subject" required autofocus>
         <button type="submit">Add subject</button>
