--- a/src/main/resources/templates/changePasswordForm.html
+++ b/src/main/resources/templates/changePasswordForm.html
@@ -8,12 +8,14 @@
 </head>
 <body>
 <form th:action="@{reset}" method="post">
-    <input type="hidden" name="token" th:value="${resetToken}">
-    <span id="errorLink" class="text-danger align-middle" th:if="${me}" th:text="${me}"></span><br>
-    <div>
-        <input type="password" name="password" minlength="6" placeholder="Haslo" required autofocus/>
+    <div class="container">
+        <input type="hidden" name="token" th:value="${resetToken}">
+        <span id="errorLink" class="text-danger align-middle" th:if="${me}" th:text="${me}"></span><br>
+        <input class="ss" type="password" name="password" minlength="6" placeholder="Haslo" required autofocus/>
+        <div >
+            <button class="reset" type="submit" value="change">Change password</button><br>
+        </div>
     </div>
-    <button class="reset" type="submit" value="Zmienic">Zmienic</button><br>
 </form>
 
 </body>
