--- a/src/main/resources/templates/quizForm.html
+++ b/src/main/resources/templates/quizForm.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
+    <script
+            src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link rel="stylesheet" type="text/css" href="../static/css/quizFormStyle.css" th:href="@{/css/quizFormStyle.css}">
 </head>
 <body>
@@ -18,7 +20,11 @@
 
 <script src="https://code.jquery.com/jquery-3.4.0.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.9.1/underscore-min.js"></script>
-<script th:inline="javascript"> let arrayQuestions = [[${questionList}]]</script>
+<script th:inline="javascript" th:fragment="frag">
+    let arrayQuestions = [[${questionList}]]
+    let nameTheme = [[${nameTheme}]]
+</script>
 <script src="/static/js/quiz.js" th:src="@{/js/quiz.js}"></script>
+<script src="/static/js/ajax.js" th:src="@{/js/ajax.js}"></script>
 </body>
 </html>
